--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -18,8 +20,10 @@
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.1",
     "pino-http": "^11.0.0",
     "xss-clean": "^0.1.4"
   },
