--- a/frontend/docker/docker-compose.mysql.yml
+++ b/frontend/docker/docker-compose.mysql.yml
@@ -1,10 +1,9 @@
-version: '3.8'
 services:
   mysql-auth:
     image: mysql:8.0
     container_name: hustleai-auth
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: authdb
       MYSQL_USER: user
       MYSQL_PASSWORD: user
